# stream-controller-meet

./: .envrc  .gitignore  DEVELOPMENT.md  README.md  USER_GUIDE.md  __install__.py  com.github.dcode.stream_controller_meet.json  flake.nix  main.py  meet_proxy.py  native_messaging_handler.py  pyproject.toml  run_proxy.sh  socket_ipc.py
GoogleMeetPlugin/: meet_proxy.py  models.py  native_messaging_handler.py  socket_ipc.py
GoogleMeetPlugin/actions/: HangUpAction.py  MeetActionBase.py  RaiseHandAction.py  ReactionActionBase.py  SendHeartAction.py  SendThumbUpAction.py  ToggleCameraAction.py  ToggleChatPanelAction.py  ToggleMuteAction.py  ToggleParticipantsPanelAction.py  TogglePresentAction.py
actions/: HangUpAction.py  MeetActionBase.py  RaiseHandAction.py  ToggleCameraAction.py  ToggleMuteAction.py
contrib/chrome-extension/: .babelrc  background.js  background.mjs  content_script.js  content_script.mjs  loader.js  manifest.json  package-lock.json  package.json  schemas.mjs  webpack.config.js
contrib/chrome-extension/tests/: background.test.mjs  content_script.test.mjs  schemas.test.mjs
tests/: conftest.py  test_actions.py  test_integration.py  test_main.py
